Cutover YAML ops to the @Yaml engine; extend search (normalize/resolvers/custom)